Fix stars not showing when no filter was selected

--- a/resources/assets/sass/application/components/_edit_tag_dropdown.scss
+++ b/resources/assets/sass/application/components/_edit_tag_dropdown.scss
@@ -7,7 +7,7 @@
   line-height: 1;
   margin-left: 5px;
   margin-right: 10px;
-  position: relative; top: -3px;
+  position: relative; top: 2px;
   &:hover {
     color: lighten($dark-blue, 15%);
   }
